Fix tables overlap on medium resolution

--- a/static/docbox/css/dashboard.css
+++ b/static/docbox/css/dashboard.css
@@ -4,7 +4,7 @@ body {
 }
 
 .sidebar {
-  width: 250px;
+  width: 200px;
   padding-top: 70px;
 }
 
@@ -13,7 +13,7 @@ body {
   left: 0;
   top: 0;
   bottom: 0;
-  width: 250px;
+  width: 200px;
 }
 .sidebar a {
   font-weight: 500;
